[package]
name = "league_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
league-client-connector = "0.1.2"
tokio = { version = "1", features = ["full"] } 
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] } 
url = "2.2.2"
anyhow = "1.0.57"
futures-util = "0.3.21"
native-tls = "0.2.10"
base64 = "0.20.0-alpha.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["json"] }
chrono = "0.4.19"
